# Music-Visualizer

./: .gitignore  README.md  app.py  pyproject.toml
static/: index.js
static/visualizers/: cubes.js  meshterrain.js
templates/: home.html  paste.html  search.html  upload.html  visual.html
