[tool.poetry]
name = "repl_python3_music"
version = "0.1.0"
description = ""
authors = ["benman604 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Werkzeug = "^2.0.1"
youtube_dl = "^2021.6.6"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
